--- a/assets/style/estilos.css
+++ b/assets/style/estilos.css
@@ -1,4 +1,4 @@
-main {
+.main {
 background-color: #2f3640;
 background: #000;
     
@@ -11,6 +11,12 @@ background-image: linear-gradient(
     rgba(0, 0, 0, 0.9)
   ), url(../img/main.jpg);}
 
+  .separador{
+    display: block;
+    margin: auto;
+    width: 80%;
+    
+  }
 .logonav{
     width: 200px;
 }
@@ -36,4 +42,11 @@ background-image: linear-gradient(
  .parallax-int{
  
     padding: 100px 0 150px 0;
+ }
+ .cartaimg{
+    width: 230px;
+    align-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    
  }
