--- a/assets/Views/page1.html
+++ b/assets/Views/page1.html
@@ -57,10 +57,10 @@
             </div>
 
             <div class="row">
-                <div class="col-3">
+                <div class=" col-12 col-md-3">
                     <img class="w-100 img-fluid" src="/assets/img/Samurai.png"></img>
                 </div>
-                <div class="col-6 text-center text-light  animate__animated animate__backInRight wow">
+                <div class="col-12 col-md-6 text-center text-light  animate__animated animate__backInRight wow">
                     <div class="textocar p-3">
                         <h5 class="bg-dark  p-5">SAMURAI</h5>
                         <p>El Samurái es una de las Clases iniciales de Elden Ring. El Samurái comienza con mucha
@@ -76,10 +76,10 @@
 
 
             <div class="row">
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                 </div>
 
-                <div class="col-6 text-center text-light animate__animated animate__backInLeft wow">
+                <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInLeft wow">
                     <div class="textocar p-3">
                         <h5 class="bg-dark  p-5">BANDIDO</h5>
                         <p>El Bandido es una de las Clases iniciales de Elden Ring. El Bandido comienza con mucho Arcano
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                     <img class="w-100 img-fluid" src="/assets/img/Bandido.png"></img>
                 </div>
 
@@ -100,10 +100,10 @@
             </div>
 
             <div class="row">
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                     <img class="w-100 img-fluid" src="/assets/img/Guerrero.png"></img>
                 </div>
-                <div class="col-6 text-center text-light animate__animated animate__backInRight wow">
+                <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
                     <div class="textocar p-3">
                         <h5 class="bg-dark  p-5 ">GUERRERO</h5>
                         <p>El Guerrero es una de las Clases iniciales de Elden Ring. El Guerrero comienza con mucha
@@ -117,10 +117,10 @@
 
 
             <div class="row">
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                 </div>
 
-                <div class="col-6 text-center text-light animate__animated animate__backInLeft wow">
+                <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInLeft wow">
                     <div class="textocar p-3">
                         <h5 class="bg-dark  p-5">CONFESOR</h5>
                         <p>El Confesor es una de las Clases iniciales de Elden Ring. El Confesor comienza con mucha Fe y
@@ -132,15 +132,15 @@
                     </div>
                 </div>
 
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                     <img class="w-100 img-fluid" src="/assets/img/confesor.png"></img>
                 </div>
 
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-12 col-md-3">
                         <img class="w-100 img-fluid" src="/assets/img/Heroe.png"></img>
                     </div>
-                    <div class="col-6 text-center text-light animate__animated animate__backInRight wow">
+                    <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
                         <div class="textocar p-3">
                             <h5 class="bg-dark  p-5 ">HEROE</h5>
                             <p>El Héroe es una de las Clases iniciales de Elden Ring. El Héroe comienza con mucha Fuerza
@@ -155,10 +155,10 @@
 
 
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-12 col-md-3">
                     </div>
 
-                    <div class="col-6 text-center text-light animate__animated animate__backInLeft wow">
+                    <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInLeft wow">
                         <div class="textocar p-3">
                             <h5 class="bg-dark  p-5">VAGANTE</h5>
                             <p>El Vagante es una de las Clases iniciales de Elden Ring. El Vagante comienza con mucha
@@ -170,15 +170,15 @@
                         </div>
                     </div>
 
-                    <div class="col-3">
+                    <div class="col-12 col-md-3">
                         <img class="w-100 img-fluid" src="/assets/img/Vagabundo.png"></img>
                     </div>
 
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-12 col-md-3">
                             <img class="w-100 img-fluid" src="/assets/img/Astrologo.png"></img>
                         </div>
-                        <div class="col-6 text-center text-light animate__animated animate__backInRight wow">
+                        <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
                             <div class="textocar p-3">
                                 <h5 class="bg-dark  p-5">ASTROLOGO</h5>
                                 <p>El Astrólogo es una de las Clases iniciales de Elden Ring. El Astrólogo comienza con
@@ -193,10 +193,10 @@
 
 
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-12 col-md-3">
                         </div>
 
-                        <div class="col-6 text-center text-light animate__animated animate__backInLeft wow">
+                        <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInLeft wow">
                             <div class="textocar p-3">
                                 <h5 class="bg-dark  p-5">MISERABLE</h5>
                                 <p>El Vagante es una de las Clases iniciales de Elden Ring. El Vagante comienza con
@@ -209,16 +209,16 @@
                             </div>
                         </div>
 
-                        <div class="col-3">
+                        <div class="col-12 col-md-3">
                             <img class="w-100 img-fluid" src="/assets/img/Miserable.png"></img>
                         </div>
 
 
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-12 col-md-3">
                                 <img class="w-100 img-fluid" src="/assets/img/Prisionero.png"></img>
                             </div>
-                            <div class="col-6 text-center text-light animate__animated animate__backInRight wow">
+                            <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
                                 <div class="textocar p-3">
                                     <h5 class="bg-dark  p-5">PRISIONERO</h5>
                                     <p>El Prisionero es una de las Clases iniciales de Elden Ring. El Prisionero
@@ -235,10 +235,10 @@
 
 
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-12 col-md-3">
                             </div>
 
-                            <div class="col-6 text-center text-light animate__animated animate__backInLeft wow">
+                            <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInLeft wow">
                                 <div class="textocar p-3">
                                     <h5 class="bg-dark  p-5">PROFETA </h5>
                                     <p>El Profeta es una de las Clases iniciales de Elden Ring. El Profeta comienza con
@@ -250,7 +250,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-3">
+                            <div class="col-12 col-md-3">
                                 <img class="w-100 img-fluid" src="/assets/img/profeta.png"></img>
                             </div>
 
