--- a/assets/Views/page1.html
+++ b/assets/Views/page1.html
@@ -17,29 +17,32 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid ">
-              <a class="navbar-brand" href="../../index.html">
-                <img src="../img/logo.png" alt="" class="logonav">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Personajes</a>
-                  </li>
-                
-                  <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:5500/index.html#registro">Registrate</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+                <a class="navbar-brand" href="#">
+                    <img src="../img/logo.png" alt="" class="logonav">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/Views/page1.html">Personajes</a>
+                        </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link" href="#registro">Registrate</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../../musica.html">Música</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
