--- a/assets/Views/personajes.html
+++ b/assets/Views/personajes.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="/assets/style/estilos1.css">
     <link rel="stylesheet" href="/assets/style/estilos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
     <title>Personajes</title>
 </head>
 
@@ -17,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid ">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../../index.html">
                     <img src="../img/logo.png" alt="" class="logonav">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -27,17 +29,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                            <a class="nav-link " aria-current="page" href="../../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./assets/Views/page1.html">Personajes</a>
+                            <a class="nav-link active" href="./assets/Views/page1.html">Personajes</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#registro">Registrate</a>
+                            <a class="nav-link" href="./registro.html">Registrate</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../musica.html">Música</a>
+                            <a class="nav-link" href="./musica.html">Música</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./tienda.html">Tienda</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +65,7 @@
             </div>
 
             <div class="row">
-                <div class=" col-12 col-md-3">
+                <div class=" col-12 col-md-3 animate__animated animate__backInLeft wow">
                     <img class="w-100 img-fluid" src="/assets/img/Samurai.png"></img>
                 </div>
                 <div class="col-12 col-md-6 text-center text-light  animate__animated animate__backInRight wow">
@@ -94,8 +99,8 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-3">
-                    <img class="w-100 img-fluid" src="/assets/img/Bandido.png"></img>
+                <div class="col-12 col-md-3 animate__animated animate__backInRight wow">
+                    <img class="w-100 img-fluid " src="/assets/img/Bandido.png"></img>
                 </div>
 
 
@@ -103,7 +108,7 @@
             </div>
 
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 animate__animated animate__backInLeft wow">
                     <img class="w-100 img-fluid" src="/assets/img/Guerrero.png"></img>
                 </div>
                 <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
@@ -135,12 +140,12 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 animate__animated animate__backInRight wow">
                     <img class="w-100 img-fluid" src="/assets/img/confesor.png"></img>
                 </div>
 
                 <div class="row">
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-md-3 animate__animated animate__backInLeft wow">
                         <img class="w-100 img-fluid" src="/assets/img/Heroe.png"></img>
                     </div>
                     <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
@@ -173,13 +178,13 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-md-3 animate__animated animate__backInRight wow">
                         <img class="w-100 img-fluid" src="/assets/img/Vagabundo.png"></img>
                     </div>
 
                     <div class="row">
                         <div class="col-12 col-md-3">
-                            <img class="w-100 img-fluid" src="/assets/img/Astrologo.png"></img>
+                            <img class="w-100 img-fluid animate__animated animate__backInLeft wow" src="/assets/img/Astrologo.png"></img>
                         </div>
                         <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
                             <div class="textocar p-3">
@@ -212,13 +217,13 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-3">
+                        <div class="col-12 col-md-3  animate__animated animate__backInRight wow">
                             <img class="w-100 img-fluid" src="/assets/img/Miserable.png"></img>
                         </div>
 
 
                         <div class="row">
-                            <div class="col-12 col-md-3">
+                            <div class="col-12 col-md-3 animate__animated animate__backInLeft wow">
                                 <img class="w-100 img-fluid" src="/assets/img/Prisionero.png"></img>
                             </div>
                             <div class="col-12 col-md-6 text-center text-light animate__animated animate__backInRight wow">
@@ -253,7 +258,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 col-md-3">
+                            <div class="col-12 col-md-3  animate__animated animate__backInRight wow">
                                 <img class="w-100 img-fluid" src="/assets/img/profeta.png"></img>
                             </div>
 
@@ -261,8 +266,52 @@
                         </div>
     </main>
     
-
-    <script src="/js/wow.min.js"></script>
+    <footer class=" container-fluid">
+  
+        <div class="row">
+          <div class="col-12  text-center mt-5">
+            <h1>Contáctanos</h1>
+          </div>
+        </div>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <img src="../img/logo.png" class="w-100 img-fluid">
+        </div>
+        <div class="col-12 col-md-3 ">
+          <h3>Juan Pablo Gómez</h3>
+          
+      
+          <a href="https://github.com/clak-g" class="redes"  target="_blank">
+            <i class="bi bi-github"></i> clak-g
+          </a>
+          <a href="https://www.behance.net/clakg" class="redes" target="_blank">
+            <i class="bi bi-behance"></i> clakg
+          </a>
+          
+        </div>
+        <div class="col-12 col-md-3 ">
+          <h3>Diego Vanegas</h3>
+          <a href="https://github.com/tomyvanegas" class="redes" target="_blank">
+            <i class="bi bi-github"></i> tomyvanegas
+            </a>
+            <h3 class="redes">
+              <i class="bi bi-whatsapp"></i> 3106224962
+            </h3>
+        </div>
+        <div class="col-12 col-md-3">
+          <h3>David Sebastián Ruiz</h3>
+          <a href="https://github.com/DavidSRV" class="redes" target="_blank">
+            <i class="bi bi-github"></i> DavidSRV
+            </a>
+            <h3 class="redes">
+              <i class="bi bi-whatsapp"></i> 3152997753
+            </h3>
+        </div>
+      </div>
+      
+      </footer>
+      
+    <script src="/controllers/wow.min.js"></script>
               <script>
               new WOW().init();
               </script>
