--- a/assets/Views/registro.html
+++ b/assets/Views/registro.html
@@ -50,16 +50,7 @@
 </header>
 
   <main class="registro mt-5 pt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col.12">
-          <i class="bi bi-person-circle fs-1"></i>
-          <h5 id="usuario">
-            
-          </h5>
-        </div>
-      </div>
-    </div>
+   
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-5">
@@ -86,7 +77,7 @@
       </div>
 
               <button id="boton" type="submit" class="btn btn-primary">Registrar</button>
-              <button id="boton2" type="button" class="btn btn-danger">Salir</button>
+              <button id="salir" type="button" class="btn btn-danger">Salir</button>
 
           </form>
         </div>
@@ -137,19 +128,17 @@
   </div>
   
   </footer>
-</script>
+  
 
-<script>
-new WOW().init();
-</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-  <script src="./controllers/firebase.js" type="module"></script>
-  <script src="./controllers/registro.js" type="module"></script>
-  <script src="./services/observador.js" type="module"></script>
+  <script src="../../controllers/firebase.js" type="module"></script>
+  <script src="../../controllers/registro.js" type="module"></script>
+  <script src="../../services/observador.js" type="module"></script>
 </body>
 
 </html>
